--- a/account_vat_period_end_statement/views/company_view.xml
+++ b/account_vat_period_end_statement/views/company_view.xml
@@ -8,13 +8,13 @@
         <field name="inherit_id" ref="base.view_company_form"/>
         <field name="arch" type="xml">
 
-            <xpath expr="//page[@string='Configuration']/group" position="after">
+            <page string="Configuration" position="inside">
                 <group string="Vat period end statement">
                     <field name="of_account_end_vat_statement_interest"/>
                     <field name="of_account_end_vat_statement_interest_percent"/>
                     <field name="of_account_end_vat_statement_interest_account_id"/>
                 </group>
-            </xpath>
+            </page>
 
         </field>
     </record>
