fix purchase merge with same product

--- a/purchase_order_extended/view/purchase_order_view.xml
+++ b/purchase_order_extended/view/purchase_order_view.xml
@@ -31,7 +31,7 @@
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='order_line']/tree//field[@name='date_planned']" position="before">
                     <field name="seq"/>
-                    <field name="sequence" invisible="1"/>
+                    <field name="sequence" groups="base.group_system"/>
                 </xpath>
                 <field name="fiscal_position" position="attributes">
                     <attribute name="on_change">onchange_fiscal_position(fiscal_position, order_line, context)</attribute>
