[sale_order_requirement] Fix production add product

--- a/sale_order_requirement/views/mrp_production_view.xml
+++ b/sale_order_requirement/views/mrp_production_view.xml
@@ -54,10 +54,10 @@
                 </page>
 
                 <field name="move_lines" position="attributes">
-                    <attribute name="context">{'edit_mrp_production': 1, 'location_id': location_src_id, 'location_dest_id': location_dest_id}</attribute>
+                     <attribute name="context">{'edit_mrp_production': 1, 'location_id': location_src_id, 'production_product_id': product_id }</attribute>
                 </field>
                 <field name="move_lines2" position="attributes">
-                    <attribute name="context">{'edit_mrp_production': 1, 'location_id': location_src_id, 'location_dest_id': location_dest_id}</attribute>
+                     <attribute name="context">{'edit_mrp_production': 1, 'location_id': location_src_id, 'production_product_id': product_id }</attribute>
                 </field>
 
                 <xpath expr="//page[@string='Consumed Products']/field[@name='move_lines']/tree/field[@name='state']" position="before">
