--- a/account_due_list/views/move_view.xml
+++ b/account_due_list/views/move_view.xml
@@ -33,7 +33,7 @@
         <record id="act_account_acount_move_line_open_tree" model="ir.actions.act_window.view">
             <field eval="2" name="sequence"/>
             <field name="view_mode">tree</field>
-            <field name="view_id" ref="account.invoice_form"/>
+            <field name="view_id" ref="account.act_account_acount_move_line_open"/>
             <field name="act_window_id" ref="account_due_list.view_account_ledger_tree"/>
         </record>
 
