--- a/sale_subscriptions/views/sale_view.xml
+++ b/sale_subscriptions/views/sale_view.xml
@@ -21,7 +21,10 @@
                         <group attrs="{'invisible': [('have_subscription', '=', 0)]}" >
                             <!--<field name="automatically_create_new_subscription" string="Self-renewal" attrs="{'invisible': [('have_subscription', '=', 0)], ('state','=','draft')]}" />-->
                             <field name="automatically_create_new_subscription" string="Self-renewal" attrs="{'invisible': [('have_subscription', '=', 0)]}" />
-                            <field name="order_duration" attrs="{'invisible': [('have_subscription', '=', 0), ('automatically_create_new_subscription', '=', False)], 'required': ['|', ('have_subscription', '=', 1), ('automatically_create_new_subscription', '=', True), ('state', '=', 'draft')]}" />
+                            <newline/>
+                            <field name="order_duration" attrs="{'invisible': [('have_subscription', '=', 0), ('automatically_create_new_subscription', '=', False)], 'required': ['|', ('have_subscription', '=', 1), ('automatically_create_new_subscription', '=', True), ('state', '=', 'draft')], 'readonly': True}" />
+                            <button name="%(action_sale_change_subscriptions)d" type="action" icon="terp-stock_effects-object-colorize" string="Change Subscriptions" attrs="{'invisible':[('state','!=','draft')]}" groups="account.group_account_user"/>
+                        
                             <field name="order_invoice_duration" attrs="{'invisible': [('have_subscription', '=', 0)], 'required': [('have_subscription', '=', 1), ('state', '=', 'draft')]}" />
                             <field name="subscription_invoice_day" groups="sale.view_subscription_invoice_day" />
                             <field name="order_start_date" attrs="{'invisible': [('have_subscription', '=', 0)]}" />
