[account_central_journal] fix and try to speedup report definition

--- a/account_central_journal/wizard/central_journal_report.xml
+++ b/account_central_journal/wizard/central_journal_report.xml
@@ -17,7 +17,7 @@
                         <field name="fiscalyear" on_change="onchange_fiscalyear(fiscalyear)"/>
                         <separator colspan="4" string="Dates movements"/>
                         <field name="date_move_line_from" invisible="1"/>
-                        <field name="date_move_line_from_view" readonly="1"/>
+                        <field name="date_move_line_from_view" />
                         <field name="date_move_line_to" attrs="{'readonly':[('print_state','!=','print')]}"/>
                     </group>
                     <newline/>
