--- a/crm_lead_correct/views/crm_lead_view.xml
+++ b/crm_lead_correct/views/crm_lead_view.xml
@@ -106,6 +106,11 @@
                             <separator colspan="4" string="Notes"/>
                             <field name="description" nolabel="1" colspan="4"/>
                             <separator colspan="4"/>
+                            <field name="phonecall_ids" context="{'default_partner_id' : partner_id}" nolabel="1" colspan="4"/>
+                            <field name="meeting_ids"
+                               context="{'default_partner_id': False, 'default_partner_address_id': False, 'email_from': False, 'categ_id' : '1'}"
+                               nolabel="1" colspan="4"/>
+
                             <group col="8" colspan="4">
                                 <field name="state" widget="statusbar" statusbar_visible="draft,open,done"
                                        statusbar_colors='{"pending":"blue"}'/>
