--- a/stock_picking_extended/views/stock_move_group_view.xml
+++ b/stock_picking_extended/views/stock_move_group_view.xml
@@ -39,7 +39,7 @@
                 <form>
                     <group colspan="4" col="4">
                         <field name="year" />
-                        <field name="date"/>
+                        <field name="real_date"/>
                         <field name="origin" />
                         <field name="source_location_id" />
                         <field name="stock_journal_id" invisible="context.get('filter_stock_journal_id', False)"/>
