--- a/stock_picking_filter/views/stock_picking_view.xml
+++ b/stock_picking_filter/views/stock_picking_view.xml
@@ -55,6 +55,37 @@
             </field>
         </record>
 
+        <record id="view_stock_picking_order_board_enhanced_filter_out" model="ir.ui.view">
+            <field name="name">stock.picking.order.board.enhanced.filter</field>
+            <field name="model">stock.picking</field>
+            <field name="inherit_id" ref="stock_picking_extended.view_stock_picking_search"/>
+            <field name="type">search</field>
+            <field name="arch" type="xml">
+                <field name="week_nbr" position="after">
+                    <separator orientation="vertical"/>
+                    <filter icon="terp-go-month"
+                        string="Last Month"
+                        name="last_month"
+                        domain="[
+                            ('minimum_planned_date', '&lt;', datetime.date.today().strftime('%%Y-%%m-01')),
+                            ('minimum_planned_date', '&gt;=', (datetime.date.today() - relativedelta(months=1)).strftime('%%Y-%%m-01'))
+                        ]"
+                    />
+                    <filter icon="terp-go-month"
+                        string="Current Month"
+                        name="current_month"
+                        domain="[
+                            ('minimum_planned_date', '&lt;', (datetime.date.today() + relativedelta(months=1)).strftime('%%Y-%%m-01')),
+                            ('minimum_planned_date', '&gt;=', (datetime.date.today()).strftime('%%Y-%%m-01 00:00:00'))
+                        ]"
+                    />
+                    <field name="date_from" filter_domain="[('minimum_planned_date','&gt;=',self)]"/>
+                    <field name="date_to" filter_domain="[('minimum_planned_date','&lt;=',self)]"/>
+                    <newline/>
+                </field>
+            </field>
+        </record>
+
         <record id="view_stock_picking_enhanced_filter" model="ir.ui.view">
             <field name="name">stock.picking.enhanced.filter</field>
             <field name="model">stock.picking</field>
