--- a/sale_subscriptions/wizard/sale_change_subscriptions_view.xml
+++ b/sale_subscriptions/wizard/sale_change_subscriptions_view.xml
@@ -11,8 +11,9 @@
                     <field name="order_duration"/>
                     <separator colspan="4"/>
                     <group colspan="2" col="4">
-                        <button special="cancel" string="Cancel"  icon="gtk-cancel"/>
-                        <button name="change_subscriptions" string="Change Subscriptions" type="object" icon="terp-stock_effects-object-colorize"/>
+                        <button special="cancel" string="Cancel" icon="gtk-cancel"/>
+                        <button name="change_subscriptions" string="Change Subscriptions" type="object"
+                                icon="terp-stock_effects-object-colorize"/>
                     </group>
                 </form>
             </field>
